Correct debugfs mount option.
Change-Id: I5ddcfeb21e6910186602442bb80f1b592d0b4ac9
Signed-off-by: Toha <tohenk@yahoo.com>

--- a/rootdir/init.smdk4x12.rc
+++ b/rootdir/init.smdk4x12.rc
@@ -143,7 +143,7 @@ on post-fs-data
     rm /data/app/tlcd_sock
 
 on boot
-    mount debugfs /sys/kernel/debug /sys/kernel/debug
+    mount debugfs none /sys/kernel/debug
 
     # Camera
     mkdir /data/cfw 0775 system system
