--- a/rootdir/init.smdk4x12.rc
+++ b/rootdir/init.smdk4x12.rc
@@ -393,7 +393,6 @@ on fs
     chown system system /sys/class/mdnie/mdnie/accessibility
     chown system system /sys/class/mdnie/mdnie/cabc
 
-    restorecon /efs
     chown radio system /efs
     chmod 0771 /efs
 
@@ -421,6 +420,10 @@ on post-fs-data
     chown media_rw media_rw /data/media
     # Set indication (checked by vold) that we have finished this action
     setprop vold.post_fs_data_done 1
+
+    # restore selinux label on certain partitions
+    restorecon_recursive /efs
+    restorecon_recursive /tombstones
 
     # give system access to wpa_supplicant.conf for backup and restore
     mkdir /data/misc/wifi 0770 wifi system
