Use cfq IO scheduler when boot has been completed.
Change-Id: If1e54e210840168edc7c1e3fd3491375e533ba97
Signed-off-by: Toha <tohenk@yahoo.com>

--- a/rootdir/init.smdk4x12.rc
+++ b/rootdir/init.smdk4x12.rc
@@ -523,6 +523,9 @@ on post-fs-data
     chmod 0755 /data/app/wv_test
     rm /data/app/tlcd_sock
 
+on property:sys.boot_completed=1
+    write /sys/block/mmcblk0/queue/scheduler cfq
+
 # icd
 service icd /system/bin/icd
     class main
