--- a/rootdir/init.smdk4x12.rc
+++ b/rootdir/init.smdk4x12.rc
@@ -181,10 +181,6 @@ on boot
     chown radio system /sys/power/gpu_lock
     chown radio system /sys/power/mali_lock
     chown radio system /sys/class/power_supply/battery/siop_activated
-    chown radio system /sys/devices/system/cpu/cpufreq/pegasusq/max_cpu_lock
-    chown radio system /sys/devices/system/cpu/cpufreq/pegasusq/min_cpu_lock
-    chown radio system /sys/devices/system/cpu/cpufreq/pegasusq/cpucore_table
-    chown radio system /sys/devices/system/cpu/cpufreq/pegasusq/hotplug_lock
     chown radio system /sys/devices/system/cpu/busfreq/curr_freq
     chown radio system /sys/devices/system/cpu/busfreq/dmc_max_threshold
     chown radio system /sys/devices/system/cpu/busfreq/min_freq
@@ -199,10 +195,6 @@ on boot
     chmod 0660 /sys/power/mali_lock
     chmod 0660 /sys/class/power_supply/battery/siop_activated
     chmod 0660 /sys/class/power_supply/battery/siop_level
-    chmod 0660 /sys/devices/system/cpu/cpufreq/pegasusq/max_cpu_lock
-    chmod 0660 /sys/devices/system/cpu/cpufreq/pegasusq/min_cpu_lock
-    chmod 0660 /sys/devices/system/cpu/cpufreq/pegasusq/cpucore_table
-    chmod 0660 /sys/devices/system/cpu/cpufreq/pegasusq/hotplug_lock
     chmod 0660 /sys/devices/system/cpu/busfreq/curr_freq
     chmod 0660 /sys/devices/system/cpu/busfreq/dmc_max_threshold
     chmod 0660 /sys/devices/system/cpu/busfreq/min_freq
@@ -525,6 +517,18 @@ on post-fs-data
 
 on property:sys.boot_completed=1
     write /sys/block/mmcblk0/queue/scheduler cfq
+
+# Powersave
+on property:sys.perf.profile=0
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor powersave
+
+# Balanced
+on property:sys.perf.profile=1
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor pegasusq
+
+# High performance
+on property:sys.perf.profile=2
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor performance
 
 # icd
 service icd /system/bin/icd
