--- a/rootdir/init.smdk4x12.rc
+++ b/rootdir/init.smdk4x12.rc
@@ -649,10 +649,10 @@ service macloader /system/bin/macloader
     oneshot
 
 on property:init.svc.macloader=stopped
-    chown system root /data/.cid.info
-    chmod 0664 /data/.cid.info
-    chown system root /data/.rev
-    chmod 0660 /data/.rev
+#    chown system root /data/.cid.info
+#    chmod 0664 /data/.cid.info
+#    chown system root /data/.rev
+#    chmod 0660 /data/.rev
 
 service charger /charger
     class charger
