--- a/rootdir/init.smdk4x12.rc
+++ b/rootdir/init.smdk4x12.rc
@@ -660,12 +660,12 @@ on property:init.svc.macloader=stopped
 #    chown system root /data/.rev
 #    chmod 0660 /data/.rev
 
-service charger /charger
+service charger /sbin/healthd -c
     class charger
-    user root
+    critical
+    seclabel u:r:healthd:s0
 
 on charger
-    mount ext4 /dev/block/platform/dw_mmc/by-name/SYSTEM /system ro wait noatime
     # CPU Frequency Governor
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor powersave
     # EHCI runtime enable for LPA
