--- a/rootdir/init.smdk4x12.rc
+++ b/rootdir/init.smdk4x12.rc
@@ -412,7 +412,17 @@ on post-fs-data
     chown system system /data/system
     chmod 0771 /data/system
 
-
+# MACloader
+    rm /data/.cid.info
+    rm /efs/wifi/.mac.info
+    copy /efs/wifi/.mac.cob /efs/wifi/.mac.info
+    chown system system /efs/wifi/.mac.cob
+    chown system system /efs/wifi/.mac.info
+    chmod 0666 /efs/wifi/.mac.cob
+    chmod 0666 /efs/wifi/.mac.info
+    write /data/.cid.info 0
+    chown system root /data/.cid.info
+    chmod 0666 /data/.cid.info
 
     # restore selinux label on certain partitions
     restorecon_recursive /efs
